tests/gateway-api-migration/fixtures/eye-of-horus-sample/input/common.service/overlays/prd/airflow-nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-nginx-ingress
  namespace: airflow
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: airflow.awoo.org
      http:
        paths:
          - backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
