tests/gateway-api-migration/fixtures/eye-of-horus-sample/input/common.service/overlays/prd/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
  - argocd-nginx-ingress.yaml
  - grafana-nginx-ingress.yaml
  - airflow-nginx-ingress.yaml
